docs: Change in Body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    Hi I am Sonal
+    <p>Hello!!!</p><hr>
+    <p>I am Sonal Khante.</p><hr>
+    <p>This is first code on github. It is just for practice purpose.</p><hr>
+    <p>Just a start to know the github use and how to handle the github.</p><hr>
 </body>
 </html>
