Update the details

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>Hello!!!</p><hr>
     <p>I am Sonal Khante.</p><hr>
     <p>This is first code on github. It is just for practice purpose.</p><hr>
-    <p>Just a start to know the github use and how to handle the github.</p><hr>
+    <p>Just a start to know the github use and how to handle the github.</p><br>
+    <p>I am working on CLI app. I'll showcase it tomorrow.</p>
+
 </body>
 </html>
