docs: a line added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <p>I am Sonal Khante.</p><hr>
     <p>This is first code on github. It is just for practice purpose.</p><hr>
     <p>Just a start to know the github use and how to handle the github.</p><br>
-    <p>I am working on CLI app. I'll showcase it tomorrow.</p>
+    <p>I am working on CLI app. I'll showcase it tomorrow.</p><br>
+    <p>Sonal is very thankfull to Tanay Pratap to strengthen the basic knowledge</p>
 
 </body>
 </html>
